<resources>
    <string name="app_name">BandLink</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_apply">Apply</string>
    <string name="register">Don\'t have an account?</string>
    <string name="signup">Register</string>
    <string name="register_usernameTooShort">Username too short</string>
    <string name="register_mailError">Not a valid email</string>
    <string name="invalid_verification">Password must match!</string>
    <string name="mainactivity">MainActivity</string>
    <!-- Strings related to Apply -->
    <string name="experience_beginner">Beginner</string>
    <string name="experience_advanced">Advanced</string>
    <string name="experience_label">Experience: </string>
    <string name="apply_page_apply_button">Apply!</string>
    <string name="apply_page_apply_title">Apply</string>
    <string name="apply_page_skills">Skills</string>
    <string name="apply_page_Title_Placeholder">Looking for placeholder</string>
    <string name="apply_page_SubTitle_Placeholder">NAME | VOTES | GENRE</string>
    <string name="apply_page_Other">Other...</string>
    <string name="apply_page_Text_Area">Additional Comments</string>
    <string name="article_title">Your Feed</string>
    <string name="article_subtitle">Placeholder</string>
    <string name="article_text">Placeholder for content</string>
    <!-- Strings related to Feed -->
    <string name="feed_post_1">Looking for Drums for upcoming gig!</string>
    <string name="feed_post_2">Looking for Female Vocalist</string>
    <string name="feed_post_3">Looking for Guitarist</string>
    <string name="feed_post_4">Looking for Lead Singer</string>
    <string name="feed_post_5">Looking for Triangle Player</string>
    <string name="feed_post_6">Looking for Beatboxer</string>
    <string name="feed_post_7">GIG SPOT FRIDAY NIGHT</string>
    <string name="feed_post_8">Looking for Bass Player</string>
    <string name="feed_info_1">John Appleseed | 8 Likes | Indie</string>
    <string name="feed_info_2">Anne Cherrytree | 50+ Likes | Pop</string>
    <string name="feed_info_3">Ikrisband | 300+ Likes | Pop-Rock</string>
    <string name="feed_info_4">Wayne Rodney | 100+ Likes | Pop</string>
    <string name="feed_info_5">Xavier Yalip | 3 Likes | Classical</string>
    <string name="feed_info_6">Jonah Relie | 50+ Likes | Hiphop</string>
    <string name="feed_info_7">Sailors Tavern | 100+ Likes | GIG</string>
    <string name="feed_info_8">Otis Ford | 50+ Likes | Jazz</string>
    <string name="feed_info_name_1">John Appleseed</string>
    <string name="feed_info_name_2">Anne Cherrytree</string>
    <string name="feed_info_name_3">Ikrisband</string>
    <string name="feed_info_name_5">Xavier Yalip</string>
    <string name="feed_info_name_6">Jonah Relie</string>
    <string name="feed_info_name_7">Sailors Tavern</string>
    <string name="feed_info_name_8">Otis Ford</string>
    <string name="feed_info_genre_1">Indie</string>
    <string name="feed_info_genre_2">Pop</string>
    <string name="feed_info_genre_3">Pop-Rock</string>
    <string name="feed_info_genre_4">Classical</string>
    <string name="feed_info_genre_5">Hiphop</string>
    <string name="feed_info_genre_6">GIG</string>
    <string name="feed_info_genre_7">Jazz</string>
    <string name="feed_info_likes_1">8 Likes</string>
    <string name="feed_info_likes_2">50+ Likes</string>
    <string name="feed_info_likes_3">300+ Likes</string>
    <string name="feed_info_likes_4">100+ Likes</string>
    <string name="feed_info_likes_5">3 Likes</string>
    <string name="nr_likes">12</string>
    <string name="post_description">Our pop-rock band is looking for an intermediate guitar player with interests and skills to play covers also to improvise and
compose similar music to: Leprous, Haken, Muse, Foo Fighters.</string>
    <string name="location">Stockholm, Sweden</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="profile_description">Lead Singer in IkrisBand</string>

    <!-- Strings related to Messages -->
    <string name="searchBoxDescription">Search Bands or Musicians</string>
    <string name="action_settings">Settings</string>
    <string name="message_box_action_bar">Message Box</string>
    <string name="new_message">Send New Message</string>

</resources>
