<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feed.Feed">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_post_1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/info1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_info_1" />

            <ImageView
                android:id="@+id/picture1"
                android:layout_width="wrap_content"
                android:layout_height="275dp"
                android:layout_marginTop="3dp"
                android:maxWidth="@dimen/activity_horizontal_margin"
                android:src="@drawable/drums" />


            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_post_2"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/info2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_info_2" />

            <ImageView
                android:id="@+id/picture2"
                android:layout_width="wrap_content"
                android:layout_height="275dp"
                android:layout_marginTop="3dp"
                android:maxWidth="@dimen/activity_horizontal_margin"
                android:src="@drawable/femalevocalist" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_post_3"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/info3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_info_3" />

            <ImageView
                android:id="@+id/picture3"
                android:layout_width="wrap_content"
                android:layout_height="275dp"
                android:layout_marginTop="3dp"
                android:maxWidth="@dimen/activity_horizontal_margin"
                android:src="@drawable/post" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_post_4"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/info4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_info_4" />

            <ImageView
                android:id="@+id/picture4"
                android:layout_width="wrap_content"
                android:layout_height="275dp"
                android:layout_marginTop="3dp"
                android:maxWidth="@dimen/activity_horizontal_margin"
                android:src="@drawable/comm4" />

            <TextView
                android:id="@+id/title5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_post_5"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/info5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_info_5" />

            <ImageView
                android:id="@+id/picture5"
                android:layout_width="wrap_content"
                android:layout_height="275dp"
                android:layout_marginTop="3dp"
                android:maxWidth="@dimen/activity_horizontal_margin"
                android:src="@drawable/triangle"/>

            <TextView
                android:id="@+id/title6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_post_6"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/info6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_info_6" />

            <ImageView
                android:id="@+id/picture6"
                android:layout_width="wrap_content"
                android:layout_height="275dp"
                android:layout_marginTop="3dp"
                android:maxWidth="@dimen/activity_horizontal_margin"
                android:src="@drawable/beatboxer"/>

            <TextView
                android:id="@+id/title7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_post_7"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/info7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_info_7" />

            <ImageView
                android:id="@+id/picture7"
                android:layout_width="wrap_content"
                android:layout_height="275dp"
                android:layout_marginTop="3dp"
                android:maxWidth="@dimen/activity_horizontal_margin"
                android:src="@drawable/tavern"/>

            <TextView
                android:id="@+id/title8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_post_8"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/info8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/padding_regular"
                android:text="@string/feed_info_8" />

            <ImageView
                android:id="@+id/picture8"
                android:layout_width="wrap_content"
                android:layout_height="275dp"
                android:layout_marginTop="3dp"
                android:maxWidth="@dimen/activity_horizontal_margin"
                android:src="@drawable/bass"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>